fixed z-index issue, working on homepage

--- a/css/lb_style.css
+++ b/css/lb_style.css
@@ -21,7 +21,7 @@
 
 html {
   background: url("../img/skullTile.png");
-  z-index: 1;
+  z-index: -2;
   scroll-behavior: smooth; }
 
 body {
@@ -30,7 +30,7 @@ body {
   font-weight: 400;
   font-style: normal;
   letter-spacing: 0.1em;
-  z-index: 3;
+  z-index: -1;
   color: #fff;
   font-size: 1.5em;
   line-height: 1.5em;
@@ -80,19 +80,16 @@ strong {
   font-weight: 900;
   text-transform: uppercase; }
 
-.menu-main-menu-container, .primary-menu {
-  z-index: 998; }
-
 .nav-menu {
   float: right;
   padding-top: 10px;
   position: fixed;
-  right: 0;
-  z-index: 999; }
+  right: 0; }
 
 .main-navigation {
   background: #000;
   position: fixed;
+  z-index: 4;
   height: 58px;
   -webkit-box-shadow: 0px 13px 19px 2px black;
   -moz-box-shadow: 0px 13px 19px 2px black;
@@ -218,12 +215,25 @@ strong {
     height: 100vh; } }
 .site-content {
   padding: 0em 1em;
-  z-index: -1;
+  z-index: 3;
   position: relative; }
 
 @media screen and (min-width: 899px) {
   .site-content {
     padding: 0em 2em; } }
+.headingBox {
+  padding: 1em;
+  position: absoulute;
+  bottom: 2em;
+  z-index: 40; }
+
+.main-text h1 {
+  font-size: 2.5em; }
+
+@media screen and (min-width: 899px) {
+  .headingBox {
+    padding: 2em;
+    text-align: right; } }
 .site-footer {
   padding: 2em;
   text-align: center;
