--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -25,7 +25,7 @@
 
 html
 	background: url("../img/skullTile.png")
-	z-index: 1
+	z-index: -2
 	scroll-behavior: smooth
 
 body
@@ -34,7 +34,7 @@ body
 	font-weight: 400
 	font-style: normal
 	letter-spacing: 0.1em
-	z-index: 3
+	z-index: -1
 	color: #fff
 	font-size: 1.5em
 	line-height: 1.5em
