--- a/sass/_nav.sass
+++ b/sass/_nav.sass
@@ -1,16 +1,14 @@
-.menu-main-menu-container, .primary-menu
-	z-index: 998
-
 .nav-menu
 	float: right
 	padding-top: 10px
 	position: fixed
 	right: 0
-	z-index: 999
+
 	
 .main-navigation
 	background: #000
 	position: fixed
+	z-index: 4
 	height: 58px
 	-webkit-box-shadow: 0px 13px 19px 2px rgba(0,0,0,1)
 	-moz-box-shadow: 0px 13px 19px 2px rgba(0,0,0,1)
@@ -123,6 +121,7 @@
 
 .imgLogo
 	padding-top: 100px
+
 .imgLogo video
 	-webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,1)	
 	-moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,1)
@@ -161,10 +160,25 @@
 
 .site-content
 	padding: 0em 1em
-	z-index: -1
+	z-index: 3
 	position: relative
 
 @media screen and (min-width: $breakmax)
 	.site-content
 		padding: 0em 2em
 
+.headingBox
+	padding: 1em
+	position: absoulute
+	bottom: 2em
+	z-index: 40
+
+.main-text
+	h1
+		font-size: 2.5em
+
+
+@media screen and (min-width: $breakmax)	
+	.headingBox
+		padding: 2em
+		text-align: right
